--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     body {
       font-family: 'Lora', serif;
-      background: url('https://i.pinimg.com/736x/bd/5d/29/bd5d29073c3d6f61d6e845e86bf1395a.jpg');
+      background: url('https://i.pinimg.com/736x/b6/19/ce/b619ce3763b051df5831396887cdfa59.jpg');
      background-size: cover;
   color: #5e2c2c;
   overflow-x: hidden;
@@ -202,8 +202,8 @@
 
 <section class="page" id="page2">
   <div class="frame">
-    <h2>Surianti & Suga</h2>
-    <h4>Anak ke-4 Bapak Hadori & Anak Ke-2 Bapak Min Geumjae</h3>
+    <h2>Surianti & Rian </h2>
+    <h4>Anak ke-4 Bapak Ha & Anak Ke-2 Bapak Aprian</h3>
     <p>Dengan penuh kebahagiaan, kami mengundang Anda untuk hadir dalam pernikahan kami:</p>
     <p><strong>Sabtu, 20 Juli 2025</strong></p>
     <p><strong>Pukul 10.00 WIB - selesai</strong></p>
@@ -226,7 +226,7 @@
   <div class="frame">
     <h2>Ucapan & Hadiah</h2>
     <div class="rekening">
-      <p><strong>Bank BCA</strong><br>1234567890<br>a.n. SUGA & SURI</p>
+      <p><strong>Bank BCA</strong><br>1234567890<br>a.n. Rian & Suri</p>
     </div>
 
     <div class="input-box">
